feat: Add campaign dashboard KPIs and translations
Introduces a new dashboard view for campaign statistics with key performance indicators (KPIs). This includes adding new icons for phone and time, creating a reusable KpiCard component, and updating translations for new UI elements and confirmation dialogs related to contact deletion and recycling.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,8 @@
     "all": "All",
     "none": "None",
     "previous": "Previous",
-    "next": "Next"
+    "next": "Next",
+    "unknown": "Unknown"
   },
   "alerts": {
     "appDataLoadError": "Could not load application data.",
@@ -484,6 +485,7 @@
     "contacts": {
       "searchPlaceholder": "Search for a contact...",
       "deleteSelection": "Delete selection ({count})",
+      "confirmDelete": "Are you sure you want to delete {count} contact(s)? This action is irreversible.",
       "headers": {
         "lastName": "LAST NAME",
         "firstName": "FIRST NAME",
@@ -541,7 +543,11 @@
           "processedRecords": "Processed Records",
           "action": "Action"
         },
-        "recycleButton": "Recycle"
+        "recycleButton": "Recycle",
+        "recycleButtonTooltip": "Reset the status of all contacts with this qualification.",
+        "notRecyclableTooltip": "This qualification is not marked as recyclable.",
+        "confirm": "Are you sure you want to recycle the {count} contact(s) qualified as \"{qualDesc}\"?",
+        "noRecyclable": "No contacts to recycle at the moment."
       }
     },
     "export": "Export",
