--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,8 +22,7 @@
     "all": "All",
     "none": "None",
     "previous": "Previous",
-    "next": "Next",
-    "unknown": "Unknown"
+    "next": "Next"
   },
   "alerts": {
     "appDataLoadError": "Could not load application data.",
@@ -485,7 +484,6 @@
     "contacts": {
       "searchPlaceholder": "Search for a contact...",
       "deleteSelection": "Delete selection ({count})",
-      "confirmDelete": "Are you sure you want to delete {count} contact(s)? This action is irreversible.",
       "headers": {
         "lastName": "LAST NAME",
         "firstName": "FIRST NAME",
@@ -543,11 +541,7 @@
           "processedRecords": "Processed Records",
           "action": "Action"
         },
-        "recycleButton": "Recycle",
-        "recycleButtonTooltip": "Reset the status of all contacts with this qualification.",
-        "notRecyclableTooltip": "This qualification is not marked as recyclable.",
-        "confirm": "Are you sure you want to recycle the {count} contact(s) qualified as \"{qualDesc}\"?",
-        "noRecyclable": "No contacts to recycle at the moment."
+        "recycleButton": "Recycle"
       }
     },
     "export": "Export",
