feat: Enhance call hangup logic and campaign management
Introduce optional duration to the CALL_HANGUP action in the live reducer. This allows for more accurate tracking of call duration, especially when the hangup event provides this information directly. When not provided, the existing live-tracked duration is used. This change also updates agent state to increment calls handled and recalculate average talk time upon hangup.

Additionally, refactor the OutboundCampaignsManager component to include a new CampaignDetailView. This enables switching between a list view and a detailed view for campaigns, improving user navigation and management capabilities.

Minor updates include removing the Arabic language option from the LanguageSwitcher and Header components, simplifying the language selection interface. The backend configuration for module visibility has also been simplified by defaulting to an empty object, removing the need for parsing from environment variables for now.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,8 +22,7 @@
     "all": "All",
     "none": "None",
     "previous": "Previous",
-    "next": "Next",
-    "unknown": "Unknown"
+    "next": "Next"
   },
   "alerts": {
     "appDataLoadError": "Could not load application data.",
@@ -473,6 +472,80 @@
     "Déconnecté": "Disconnected",
     "Miseenattente": "On Hold",
     "Formation": "Training"
+  },
+  "campaignDetail": {
+    "backToCampaigns": "Back to campaigns",
+    "associatedScript": "Associated script: {scriptName}",
+    "tabs": {
+      "contacts": "Contacts ({count})",
+      "dashboard": "Dashboard",
+      "settings": "Settings"
+    },
+    "contacts": {
+      "searchPlaceholder": "Search for a contact...",
+      "deleteSelection": "Delete selection ({count})",
+      "headers": {
+        "lastName": "LAST NAME",
+        "firstName": "FIRST NAME",
+        "phone": "PHONE",
+        "postalCode": "POSTAL CODE",
+        "status": "STATUS",
+        "lastQualif": "Last Qualification",
+        "lastNote": "Last Note"
+      },
+      "noContacts": "No contacts found.",
+      "pagination": "Page {currentPage} of {totalPages}"
+    },
+    "dashboard": {
+      "kpis": {
+        "completionRate": "Completion Rate",
+        "contactRate": "Contact Rate",
+        "conversionRate": "Conversion Rate",
+        "aht": "AHT"
+      },
+      "fileProgress": {
+        "title": "File Progression",
+        "processed": "Processed:",
+        "remaining": "Remaining:"
+      },
+      "quota": {
+        "title": "Quotas Tracking",
+        "ruleStartsWith": "Quota: {field} starts with \"{value}\"",
+        "ruleEquals": "Quota: {field} equals \"{value}\"",
+        "achieved": "Achieved:"
+      },
+      "charts": {
+        "qualifDistributionTitle": "Qualifications Distribution",
+        "successByHourTitle": "Success Hours (Conversions)",
+        "conversionsLabel": "Conversions"
+      },
+      "tables": {
+        "qualifPerfTitle": "Performance by Qualification",
+        "agentPerfTitle": "Performance by Agent",
+        "headers": {
+          "qualification": "QUALIFICATION",
+          "processedRecords": "PROCESSED RECORDS",
+          "rate": "RATE",
+          "agent": "Agent",
+          "processedCalls": "Handled Calls",
+          "conversions": "Conversions"
+        }
+      }
+    },
+    "settings": {
+      "recycling": {
+        "title": "Contact Recycling",
+        "description": "Reset the status of qualified contacts to make them available again for agents.",
+        "headers": {
+          "qualification": "Qualification",
+          "processedRecords": "Processed Records",
+          "action": "Action"
+        },
+        "recycleButton": "Recycle"
+      }
+    },
+    "export": "Export",
+    "noDataToExport": "No processed data to export."
   },
   "qualifications": {
     "types": {
